initial release, works fine so far

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Reactor
 
-Please welcome Reactor. A new reactor library with the very original name of "Reactor". 
+A reactor library with the very original name of "Reactor". 
 
 What is a reactor any way?
 
